--- a/vulnerabilities/other/resin-viewfile-lfr.yaml
+++ b/vulnerabilities/other/resin-viewfile-lfr.yaml
@@ -7,7 +7,7 @@ info:
   reference: |
     - http://0day5.com/archives/1173/
     - https://www.cnvd.org.cn/flaw/show/CNVD-2006-3205
-  tags: cve,cve2019,grafana
+  tags: resin,caucho,lfr
 
 requests:
   - method: GET
