minor update and workflow update

--- a/workflows/wordpress-workflow.yaml
+++ b/workflows/wordpress-workflow.yaml
@@ -56,3 +56,4 @@ workflows:
           - template: vulnerabilities/wordpress/wp-uploads-listing.yaml
           - template: vulnerabilities/wordpress/wp-license-file.yaml
           - template: vulnerabilities/wordpress/wordpress-infinitewp-auth-bypass.yaml
+          - template: vulnerabilities/wordpress/wp-modern-events-calendar-lite.yaml
