--- a/vulnerabilities/wordpress/wp-modern-events-calendar-lite.yml
+++ b/vulnerabilities/wordpress/wp-modern-events-calendar-lite.yml
@@ -3,8 +3,9 @@ id: wp-modern-events-calendar-lite
 info:
   name: Modern Events Calendar Lite < 5.16.5 - Unauthenticated Events Export
   author: random_robbie
-  severity: info
-  tags: wordpress
+  severity: medium
+  tags: wordpress,wp-plugin
+  reference: https://wpscan.com/vulnerability/c7b1ebd6-3050-4725-9c87-0ea525f8fecc
 
 requests:
   - method: GET
@@ -17,6 +18,7 @@ requests:
         words:
           - "mec-events"
         part: header
+
       - type: status
         status:
           - 200
