--- a/technologies/grav-cms-detect.yaml
+++ b/technologies/grav-cms-detect.yaml
@@ -11,15 +11,17 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/admin"
+      - "{{BaseURL}}"
 
     matchers-condition: or
     matchers:
-      - type: status
-        status:
-          - 200
+
+      - type: word
+        part: header
+        words:
+          - 'Set-Cookie: grav-site-'
 
       - type: word
         part: body
         words:
-          - '<title>Grav Admin Login'
+          - '<meta name="generator" content="GravCMS" />'
