--- a/vulnerabilities/apache/apache-solr-file-read.yaml
+++ b/vulnerabilities/apache/apache-solr-file-read.yaml
@@ -32,8 +32,10 @@ requests:
         group: 1
         internal: true
 
+    req-condition: true
     matchers:
-      - type: regex
-        regex:
-          - "root:[x*]:0:0:"
-        part: body
+      - type: dsl
+        dsl:
+          - 'status_code_2 == 200'
+          - 'regex("root:[x*]:0:0:", body_2)'
+        condition: and
