--- a/vulnerabilities/other/xiuno-bbs-reinstallation.yaml
+++ b/vulnerabilities/other/xiuno-bbs-reinstallation.yaml
@@ -1,6 +1,6 @@
 id: xiuno-bbs-reinstallation
 info:
-  name: Xiuno BBS (CNVD-2019-01348
+  name: Xiuno BBS CNVD-2019-01348
   author: princechaddha
   severity: medium
   description: The Xiuno BBS system has a system reinstallation vulnerability. The vulnerability stems from the failure to protect or filter the installation directory after the system is installed. Attackers can directly reinstall the system through the installation page.
