Snoop.jsp added

--- a/misconfiguration/tomcat-scripts.yaml
+++ b/misconfiguration/tomcat-scripts.yaml
@@ -12,6 +12,7 @@ requests:
       - "{{BaseURL}}/examples/servlets/index.html"
       - "{{BaseURL}}/examples/jsp/index.html"
       - "{{BaseURL}}/examples/websocket/index.xhtml"
+      - "{{BaseURL}}/examples/jsp/snp/snoop.jsp"
       - "{{BaseURL}}/..;/examples/servlets/index.html"
       - "{{BaseURL}}/..;/examples/jsp/index.html"
       - "{{BaseURL}}/..;/examples/websocket/index.xhtml"
@@ -22,3 +23,4 @@ requests:
           - "JSP Samples"
           - "Servlets Examples"
           - "WebSocket Examples"
+          - "snoop.jsp"
