--- a/vulnerabilities/other/etouch-v2-sqli.yaml
+++ b/vulnerabilities/other/etouch-v2-sqli.yaml
@@ -4,6 +4,9 @@ info:
   author: princechaddha
   severity: high
   tags: etouch,sqli
+  refrence: |
+    - https://github.com/mstxq17/CodeCheck/
+    - https://www.anquanke.com/post/id/168991
 
 requests:
   - method: GET
