Product seems to be called ectouch

--- a/vulnerabilities/other/etouch-v2-sqli.yaml
+++ b/vulnerabilities/other/etouch-v2-sqli.yaml
@@ -1,6 +1,6 @@
 id: etouch-v2-sqli
 info:
-  name: Etouch v2 SQL Injection
+  name: Ectouch v2 SQL Injection
   author: princechaddha
   severity: high
   tags: etouch,sqli
