--- a/vulnerabilities/other/feifeicms-lfr.yaml
+++ b/vulnerabilities/other/feifeicms-lfr.yaml
@@ -4,6 +4,7 @@ info:
   author: princechaddha
   severity: high
   tags: feifeicms,lfi
+  reference: https://www.cnblogs.com/jinqi520/p/10202615.html
 
 requests:
   - method: GET
