--- a/exposures/configs/nginx-config.yaml
+++ b/exposures/configs/nginx-config.yaml
@@ -3,7 +3,7 @@ id: nginx-config
 info:
   name: Nginx Config file disclosure
   author: sheikhrishad
-  severity: low
+  severity: info
   tags: config,exposure,nginx
 
 requests:
