--- a/vulnerabilities/other/spark-webui-unauth.yaml
+++ b/vulnerabilities/other/spark-webui-unauth.yaml
@@ -17,7 +17,7 @@ requests:
           - 200
       - type: word
         words:
-          - "<title>Spark Master at spark://
+          - "<title>Spark Master at spark://"
           - "<strong>URL:</strong>"
         part: body
         condition: and
