Reduce FP due to not actually execution of the PHP but rather it being returned as is (the content)

--- a/vulnerabilities/wordpress/wordpress-rce-simplefilelist.yaml
+++ b/vulnerabilities/wordpress/wordpress-rce-simplefilelist.yaml
@@ -63,6 +63,8 @@ requests:
       - type: word
         words:
           - 'Nuclei - Open source project (github.com/projectdiscovery/nuclei)'
+          - "PHP Version"
+          - "Configuration Command"
         part: body
       - type: word
         words:
