--- a/vulnerabilities/wordpress/wordpress-rce-simplefilelist.yaml
+++ b/vulnerabilities/wordpress/wordpress-rce-simplefilelist.yaml
@@ -66,6 +66,7 @@ requests:
           - "PHP Version"
           - "Configuration Command"
         part: body
+        condition: and
       - type: word
         words:
           - 'text/html'
