--- a/misconfiguration/aem/aem-login-status.yaml
+++ b/misconfiguration/aem/aem-login-status.yaml
@@ -4,7 +4,7 @@ info:
   author: DhiyaneshDk
   name: AEM Login Status
   severity: info
-  reference: https://www.slideshare.net/0ang3el/hunting-for-security-bugs-in-aem-webapps-129262212(slide -35)
+  reference: https://www.slideshare.net/0ang3el/hunting-for-security-bugs-in-aem-webapps-129262212
   tags: aem
 
 
