Matcher for DNS interaction

--- a/vulnerabilities/other/hashicorp-consul-rce.yaml
+++ b/vulnerabilities/other/hashicorp-consul-rce.yaml
@@ -5,7 +5,7 @@ info:
   author: pikpikcu
   severity: critical
   reference: https://www.exploit-db.com/exploits/46074
-  tags: hashicorp,rce
+  tags: hashicorp,rce,oob
 
 requests:
   - raw:
@@ -41,9 +41,8 @@ requests:
         User-Agent: Mozilla/5.0 (Windows NT 10.0; rv:68.0) Gecko/20100101 Firefox/68.0
         Connection: close
 
-    matchers-condition: and
     matchers:
-
-      - type: status
-        status:
-          - 200
+      - type: word
+        part: interactsh_protocol # Confirms the DNS Interaction
+        words:
+          - "dns"
