--- a/exposed-panels/sharecenter-login.yaml
+++ b/exposed-panels/sharecenter-login.yaml
@@ -14,4 +14,5 @@ requests:
       - type: word
         words:
           - "ShareCenter"
+          - "Please Select Your Account"
         condition: and
