--- a/takeovers/freshdesk-takeover.yaml
+++ b/takeovers/freshdesk-takeover.yaml
@@ -11,10 +11,14 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}"
-
+    matchers-condition: and
     matchers:
       - type: word
         words:
           - There is no helpdesk here!
           - Maybe this is still fresh!
         condition: and
+        - type: word
+        words:
+          - "freshservice.com"
+        negative: true
