--- a/exposures/configs/oracle-ebs-credentials-disclosure.yaml
+++ b/exposures/configs/oracle-ebs-credentials-disclosure.yaml
@@ -4,7 +4,7 @@ info:
   name: Oracle EBS Credentials Disclosure
   author: dhiyaneshDk
   severity: medium
-  tags: oracle
+  tags: config,exposure,oracle
   reference:
     - https://www.blackhat.com/docs/us-16/materials/us-16-Litchfield-Hackproofing-Oracle-eBusiness-Suite-wp-4.pdf
     - https://www.blackhat.com/docs/us-16/materials/us-16-Litchfield-Hackproofing-Oracle-eBusiness-Suite.pdf
@@ -14,7 +14,7 @@ requests:
   - method: GET
     path:
       - '{{BaseURL}}/OA_HTML/jtfwrepo.xml'
-      - '{{BaseURL}}//OA_HTML/jtfwrepo.xml'
+
     matchers-condition: and
     matchers:
       - type: word
