--- a/workflows/jira-workflow.yaml
+++ b/workflows/jira-workflow.yaml
@@ -6,9 +6,6 @@ info:
   description: A simple workflow that runs all Jira related nuclei templates on a given target.
   tags: workflow
 
-  # Supported on Nuclei v2.2.0 (https://github.com/projectdiscovery/nuclei/releases/tag/v2.2.0)
-  # Old workflows still remains valid, and will be working with all nuclei versions.
-
 workflows:
 
   - template: exposed-panels/jira-detect.yaml
@@ -19,6 +16,7 @@ workflows:
       - template: cves/2019/CVE-2019-3396.yaml
       - template: cves/2019/CVE-2019-3402.yaml
       - template: cves/2019/CVE-2019-8442.yaml
+      - template: cves/2019/CVE-2019-8446.yaml
       - template: cves/2019/CVE-2019-8449.yaml
       - template: cves/2019/CVE-2019-8451.yaml
       - template: cves/2019/CVE-2019-11581.yaml
