--- a/network/rdp-detect.yaml
+++ b/network/rdp-detect.yaml
@@ -3,7 +3,7 @@ info:
   name: Remote Desktop Protocol
   author: princechaddha
   severity: info
-  tags: windows,rdp
+  tags: windows,rdp,network
 
 network:
   - inputs:
