--- a/vulnerabilities/other/concrete-xss.yaml
+++ b/vulnerabilities/other/concrete-xss.yaml
@@ -5,7 +5,7 @@ info:
   description: The Concrete CMS < 8.5.2 is vulnerable to Reflected XSS using cID parameter.
   name: Unauthenticated reflected XSS in preview_as_user function
   severity: medium
-  tags: concrete,xss
+  tags: concrete,xss,cms
   reference: |
       - https://hackerone.com/reports/643442
       - https://github.com/concrete5/concrete5/pull/7999
