--- a/vulnerabilities/springboot/springboot-actuators-jolokia-xxe.yaml
+++ b/vulnerabilities/springboot/springboot-actuators-jolokia-xxe.yaml
@@ -4,7 +4,7 @@ info:
   name: Spring Boot Actuators (Jolokia) XXE
   author: dwisiswant0
   severity: high
-  description: todo
+  description: A vulnerability in Spring Boot Actuators's 'jolokia' endpoint allows remote attackers to preform an XML External Entities attack, include content stored on a remote server as if it was its own - this has the potential to allow the execution of arbitrary code and/or disclosure of sensitive information from the target machine.
   tags: springboot,jolokia,xxe
 
 requests:
