--- a/misconfiguration/nginx/nginx-vhost-traffic-status.yaml
+++ b/misconfiguration/nginx/nginx-vhost-traffic-status.yaml
@@ -5,7 +5,7 @@ info:
   author: geeknik
   reference: https://github.com/vozlt/nginx-module-vts
   severity: low
-  tags: status,nginx
+  tags: status,nginx,misconfig
 
 requests:
   - method: GET
