--- a/vulnerabilities/other/gloo-unauth.yaml
+++ b/vulnerabilities/other/gloo-unauth.yaml
@@ -1,10 +1,10 @@
 id: gloo-unauth
 
 info:
-  name: Gloo UI Unauthentication
+  name: Unauthenticated Gloo UI
   author: dhiyaneshDk
   severity: high
-  tags: auth,gloo
+  tags: unauth,gloo
 
 requests:
   - method: GET
@@ -14,6 +14,7 @@ requests:
       User-Agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55"
       Content-type: "application/grpc-web+proto"
       Referer: "{{BaseURL}}/admin/"
+
     matchers-condition: and
     matchers:
       - type: word
