--- a/network/rdp-detect.yaml
+++ b/network/rdp-detect.yaml
@@ -1,6 +1,7 @@
 id: rdp-detect
+
 info:
-  name: Remote Desktop Protocol
+  name: Windows RDP Detection
   author: princechaddha
   severity: info
   tags: windows,rdp,network
