--- a/vulnerabilities/other/powercreator-cms-rce.yaml
+++ b/vulnerabilities/other/powercreator-cms-rce.yaml
@@ -4,7 +4,7 @@ info:
   name: PowerCreator CMS RCE
   author: pikpikcu
   severity: critical
-  reference: http://www.mstir.cn/index.php/2020/11/18/powercreatorcms-rce/
+  # reference: http://www.mstir.cn/index.php/2020/11/18/powercreatorcms-rce/
   tags: rce,powercreator
 
 requests:
