--- a/vulnerabilities/generic/top-xss-params.yaml
+++ b/vulnerabilities/generic/top-xss-params.yaml
@@ -19,7 +19,7 @@ requests:
     matchers:
       - type: word
         words:
-          - "<svg/onload=confirm('testing-xss"
+          - "\"<svg/onload=confirm('testing-xss"
         part: body
 
       - type: word
