--- a/takeovers/tilda-takeover.yaml
+++ b/takeovers/tilda-takeover.yaml
@@ -11,9 +11,13 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}"
-
+    matchers-condition: and
     matchers:
       - type: word
         words:
-          - <title>Please renew your subscription</title>
           - Please go to the site settings and put the domain name in the Domain tab.
+      - type: word
+        words:
+          - "<title>Please renew your subscription</title>"
+        negative: true
+          
