--- a/misconfiguration/exposed-kafdrop.yaml
+++ b/misconfiguration/exposed-kafdrop.yaml
@@ -4,12 +4,13 @@ info:
   name: Publicly exposed Kafdrop Interface
   author: dhiyaneshDk
   severity: low
-  tags: exposure
+  tags: exposure,misconfig
 
 requests:
   - method: GET
     path:
       - '{{BaseURL}}'
+
     matchers:
       - type: word
         words:
