--- a/exposed-panels/bitrix-panel.yaml
+++ b/exposed-panels/bitrix-panel.yaml
@@ -10,6 +10,7 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/bitrix/admin/"
+
     redirects: true
     max-redirects: 2
     matchers-condition: and
@@ -17,7 +18,10 @@ requests:
       - type: word
         words:
           - "USER_LOGIN"
+          - "/bitrix/js/main/"
         part: body
+        condition: and
+
       - type: status
         status:
           - 200
