--- a/vulnerabilities/other/showdoc-file-upload-rce.yaml
+++ b/vulnerabilities/other/showdoc-file-upload-rce.yaml
@@ -23,18 +23,18 @@ requests:
         ----------------------------835846770881083140190633--
 
       - |
-        GET /{{php}} HTTP/1.1
+        GET /Public/Uploads{{url_decode("§path§")}} HTTP/1.1
         Host: {{Hostname}}
         Origin: {{BaseURL}}
 
     extractors:
       - type: regex
-        name: php
+        name: path
         group: 1
         internal: true
         part: body
         regex:
-          - 'wip'
+          - '/Uploads\\(.*?)"\,"success"'
 
     req-condition: true
     matchers:
