--- a/vulnerabilities/other/showdoc-file-upload-rce.yaml
+++ b/vulnerabilities/other/showdoc-file-upload-rce.yaml
@@ -4,6 +4,7 @@ info:
   author: pikpikcu
   severity: critical
   reference: https://github.com/star7th/showdoc/pull/1059
+  tags: rce,fileupload,showdoc
 
 requests:
   - raw:
