--- a/vulnerabilities/other/oa-v9-uploads-file.yaml
+++ b/vulnerabilities/other/oa-v9-uploads-file.yaml
@@ -1,7 +1,7 @@
 id: oa-v9-uploads-file
 
 info:
-  name: OA V9 RCE via Uploads File
+  name: OA V9 RCE via File Upload
   author: pikpikcu
   severity: high
   description: A vulnerability in OA V9 uploadOperation.jsp endpoint allows remote attackers to upload arbitrary files to the server. These files can be subsequently called and are executed by the remote software.
