--- a/default-logins/showdoc/showdoc-default-password.yaml
+++ b/default-logins/showdoc/showdoc-default-password.yaml
@@ -11,17 +11,19 @@ info:
 requests:
   - method: POST
     path:
-      - "/server/index.php?s=/api/user/login"
+      - "{{BaseURL}}/server/index.php?s=/api/user/login"
     body: |
-      username=showdoc&password=123456
+      username=showdoc&password=123456&v_code=
 
+    headers:
+      Content-Type: application/x-www-form-urlencoded;charset=UTF-8
     matchers-condition: and
     matchers:
 
       - type: word
         words:
-          - "groupid"
-          - "user_token"
+          - '"username":"showdoc"'
+          - '"user_token":'
         condition: and
 
       - type: status
