--- a/default-logins/showdoc/showdoc-default-password.yaml
+++ b/default-logins/showdoc/showdoc-default-password.yaml
@@ -6,7 +6,7 @@ info:
   severity: medium
   reference: |
     - https://blog.star7th.com/2016/05/2007.html
-  tags: showdoc,dlogin
+  tags: showdoc,default-login
 
 requests:
   - method: POST
