--- a/misconfiguration/sap-directory-listing.yaml
+++ b/misconfiguration/sap-directory-listing.yaml
@@ -4,20 +4,26 @@ info:
   name: SAP Directory Listing
   author: dhiyaneshDK
   severity: medium
-  tags: sap,directory
+  tags: sap,listing,misconfig
 
 requests:
   - method: GET
     path:
       - '{{BaseURL}}/irj/go/km/navigation/'
-      - '{{BaseURL}}/sap/irj/go/km/navigation/'
+
+    matchers-condition: and
     matchers:
       - type: word
         words:
-          - '~system'
-          - 'Changed'
-          - '.webdav.'
+          - 'title="~system"'
+          - 'NetWeaver'
         condition: and
+
       - type: status
         status:
           - 200
+
+      - type: word
+        words:
+          - "text/html"
+        part: header
