--- a/misconfiguration/unauthenticated-zippkin.yaml
+++ b/misconfiguration/unauthenticated-zippkin.yaml
@@ -1,7 +1,7 @@
-id: zippkin-unauth
+id: unauthenticated-zippkin
 
 info:
-  name: Zippkin Unauth
+  name: Unauthenticated Zippkin
   author: dhiyaneshDk
   severity: high
   description: Unauthenticated access to Zippkin
