--- a/exposures/backups/php-backup-files.yaml
+++ b/exposures/backups/php-backup-files.yaml
@@ -4,7 +4,7 @@ info:
   name: PHP source disclosure through backup files
   author: StreetOfHackerR007 (Rohit Soni)
   severity: medium
-  tags: exposure,backup
+  tags: exposure,backup,php
 
 requests:
   - method: GET
@@ -24,16 +24,31 @@ requests:
       - "{{BaseURL}}/404.php.bak"
       - "{{BaseURL}}/wp-config.php.bak"
       - "{{BaseURL}}/wp-login.php.bak"
+
     redirects: true
+    max-redirects: 1
 
     matchers-condition: and
     matchers:
       - type: status
         status:
           - 200
-        condition: and
 
       - type: word
         words:
           - "<?php"
           - "<?="
+        condition: or
+        part: body
+
+      - type: word
+        words:
+          - "?>"
+        part: body
+
+      - type: word
+        words:
+          - "text/plain"
+          - "bytes"
+        part: header
+        condition: or
