--- a/misconfiguration/springboot/springboot-env.yaml
+++ b/misconfiguration/springboot/springboot-env.yaml
@@ -3,7 +3,7 @@ id: springboot-env
 info:
   name: Detect Springboot Env Actuator
   author: that_juan_ & dwisiswant0 & wdahlenb
-  severity: high
+  severity: low
   description: Sensitive environment variables may not be masked
 
 requests:
