Workflow and tags update

--- a/misconfiguration/springboot/springboot-heapdump.yaml
+++ b/misconfiguration/springboot/springboot-heapdump.yaml
@@ -5,6 +5,7 @@ info:
   author: that_juan_ & dwisiswant0 & wdahlenb
   severity: critical
   description: Environment variables and HTTP requests can be found in the HPROF
+  tags: springboot,disclosure
 
 requests:
   - method: GET
