--- a/technologies/wazuh-detect.yaml
+++ b/technologies/wazuh-detect.yaml
@@ -5,7 +5,7 @@ info:
   author: cyllective
   severity: info
   description: Detects wazuh
-  tags: technology,wazuh
+  tags: tech,wazuh
   references:
     - https://github.com/wazuh/wazuh
 
