--- a/default-logins/panabit/panabit-default-password.yaml
+++ b/default-logins/panabit/panabit-default-password.yaml
@@ -8,18 +8,38 @@ info:
   tags: panabit,default-login
 
 requests:
-  - method: POST
-    path:
-      - "{{BaseURL}}/login/userverify.cgi"
-
-    body: "username=admin&password=panabit"
+  - raw:
+      - |
+        POST /login/userverify.cgi HTTP/1.1
+        Host: {{Hostname}}
+        Content-Length: 246
+        Origin: {{BaseURL}}
+        Content-Type: multipart/form-data; boundary=----WebKitFormBoundaryAjZMsILtbrBp8VbC
+        User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.85 Safari/537.36
+        Referer: {{BaseURL}}/login/login.htm
+        Accept-Encoding: gzip, deflate
+        Accept-Language: en-GB,en-US;q=0.9,en;q=0.8
+        Connection: close
+        
+        ------WebKitFormBoundaryAjZMsILtbrBp8VbC
+        Content-Disposition: form-data; name="username"
+        
+        admin
+        ------WebKitFormBoundaryAjZMsILtbrBp8VbC
+        Content-Disposition: form-data; name="password"
+        
+        panabit
+        ------WebKitFormBoundaryAjZMsILtbrBp8VbC--
 
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "URL=/index.htm"
+          - '<META HTTP-EQUIV=REFRESH CONTENT="0;URL=/index.htm">'
+          - 'urn:schemas-microsoft-com:vml'
         part: body
+        condition: and
+
       - type: status
         status:
           - 200
