--- a/default-logins/nsicg/nsicg-default-password.yaml
+++ b/default-logins/nsicg/nsicg-default-password.yaml
@@ -6,7 +6,7 @@ info:
   severity: low
   reference: |
     - https://www.cnvd.org.cn/flaw/show/CNVD-2016-08603
-  tags: nscig,default-logins
+  tags: nscig,default-login
 
 requests:
   - method: POST
