Handling edge cases

--- a/misconfiguration/springboot/springboot-env.yaml
+++ b/misconfiguration/springboot/springboot-env.yaml
@@ -18,8 +18,14 @@ requests:
         part: body
         words:
           - "applicationConfig"
+
+      - type: word
+        part: body
+        words:
+          - "server.port"
           - "local.server.port"
-        condition: and
+        condition: or
+
       - type: status
         status:
           - 200
