--- a/default-logins/flir/flir-ax8-default-credentials.yaml
+++ b/default-logins/flir/flir-ax8-default-credentials.yaml
@@ -4,25 +4,39 @@ info:
   name: Flir Default Credentials
   author: pikpikcu
   severity: medium
-  tags: flir,dlogin
+  tags: default-login,flir
 
 requests:
-  - method: GET
-    path:
-      - "{{BaseURL}}/login/dologin"
-    headers:
-      Content-Type: application/x-www-form-urlencoded; charset=UTF-8
-    body: |
-      user_name=admin&user_password=admin
+  - raw:
+      - |
+        POST /login/dologin HTTP/1.1
+        Host: {{Hostname}}
+        Content-Length: 35
+        Accept: */*
+        X-Requested-With: XMLHttpRequest
+        Content-Type: application/x-www-form-urlencoded; charset=UTF-8
+        Accept-Encoding: gzip, deflate
+        Accept-Language: en-GB,en-US;q=0.9,en;q=0.8
+        Connection: closen
+
+        user_name=admin&user_password=admin
 
     matchers-condition: and
     matchers:
 
       - type: word
         words:
-          - "succes"
+          - '"success"'
+
+      - type: dsl
+        dsl:
+          - contains(tolower(all_headers), 'text/html')
+          - contains(tolower(all_headers), 'phpsessid')
         condition: and
 
       - type: status
         status:
           - 200
+
+
+
