--- a/workflows/wordpress-workflow.yaml
+++ b/workflows/wordpress-workflow.yaml
@@ -31,6 +31,7 @@ workflows:
           - template: cves/2020/CVE-2020-35951.yaml
           - template: cves/2020/CVE-2020-35489.yaml
           - template: cves/2021/CVE-2021-24146.yaml
+          - template: cves/2021/CVE-2021-24176.yaml
           - template: vulnerabilities/wordpress/wordpress-auth-bypass-wptimecapsule.yaml
           - template: vulnerabilities/wordpress/wordpress-rce-simplefilelist.yaml
           - template: vulnerabilities/wordpress/wordpress-total-upkeep-backup-download.yaml
