--- a/miscellaneous/tabnabbing-check.yaml
+++ b/miscellaneous/tabnabbing-check.yaml
@@ -1,14 +1,16 @@
-id: tabnabbing
+id: tabnabbing-check
 
 info:
-  name: (Reverse) Tabnabbing
+  name: Reverse Tabnabbing
   author: bolli95
-  severity: low
+  severity: info
+  tags: misc
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matchers-condition: and
     matchers:
       - type: dsl
