--- a/vulnerabilities/other/natshell-path-traversal.yaml
+++ b/vulnerabilities/other/natshell-path-traversal.yaml
@@ -17,8 +17,7 @@ requests:
 
       - type: regex
         regex:
-          - "root:[x*]:0:0"
-        condition: and
+          - "toor:[x*]:0:0"
 
       - type: status
         status:
