--- a/workflows/jira-workflow.yaml
+++ b/workflows/jira-workflow.yaml
@@ -23,11 +23,5 @@ workflows:
       - template: cves/2019/CVE-2019-3403.yaml
       - template: cves/2020/CVE-2020-14179.yaml
       - template: cves/2020/CVE-2020-14181.yaml
-      - template: vulnerabilities/jira/jira-service-desk-signup.yaml
-      - template: vulnerabilities/jira/jira-unauthenticated-dashboards.yaml
-      - template: vulnerabilities/jira/jira-unauthenticated-popular-filters.yaml
-      - template: vulnerabilities/jira/jira-unauthenticated-projects.yaml
-      - template: vulnerabilities/jira/jira-unauthenticated-user-picker.yaml
-      - template: vulnerabilities/jira/jira-unauthenticated-resolutions.yaml
-      - template: vulnerabilities/jira/jira-unauthenticated-adminprojects.yaml
-      - template: vulnerabilities/jira/jira-unauthenticated-projectcategories.yaml
+      - template: vulnerabilities/jira/
+
