--- a/workflows/thinkcmf-workflow.yaml
+++ b/workflows/thinkcmf-workflow.yaml
@@ -9,5 +9,4 @@ workflows:
 
   - template: technologies/thinkcmf-detection.yaml
     subtemplates:
-      - template: vulnerabilities/thinkcmf/thinkcmf-lfi.yaml
-      - template: vulnerabilities/thinkcmf/thinkcmf-rce.yaml
+      - template: vulnerabilities/thinkcmf/
