--- a/workflows/thinkphp-workflow.yaml
+++ b/workflows/thinkphp-workflow.yaml
@@ -11,7 +11,4 @@ workflows:
     matchers:
       - name: thinkphp
         subtemplates:
-          - template: vulnerabilities/thinkphp/thinkphp-2-rce.yaml
-          - template: vulnerabilities/thinkphp/thinkphp-5022-rce.yaml
-          - template: vulnerabilities/thinkphp/thinkphp-5023-rce.yaml
-          - template: vulnerabilities/thinkphp/thinkphp-509-information-disclosure.yaml
+          - template: vulnerabilities/thinkphp/
