Added a few Magento related templates

--- a/technologies/magmi-detect.yaml
+++ b/technologies/magmi-detect.yaml
@@ -4,6 +4,7 @@ info:
   name: "MAGMI (Magento Mass Importer) Plugin Detect"
   author: "dwisiswant0"
   severity: "info"
+  tags: magento
 
 requests:
   - method: GET
