--- a/technologies/pega-detect.yaml
+++ b/technologies/pega-detect.yaml
@@ -11,7 +11,15 @@ requests:
       - "{{BaseURL}}/prweb/PRRestService/unauthenticatedAPI/v1/docs"
     headers:
       User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55
+    matchers-condition: and
     matchers:
       - type: word
         words:
-          - "Pega API"
+          - '"description" :"The Pega API'
+      - type: status
+        status:
+          - 200
+      - type: word
+        words:
+          - 'application/json'
+        part: header
