--- a/exposures/files/ioncube-loader-wizard.yaml
+++ b/exposures/files/ioncube-loader-wizard.yaml
@@ -1,7 +1,7 @@
 id: ioncube-loader-wizard
 
 info:
-  name: ioncube-loader-wizard file detection template
+  name: Ioncube Loader Wizard disclosure
   author: Mubassirpatel
   severity: medium
   description: ioncube-loader-wizard is vulnerable to xss,phpinfo, etc.
