--- a/exposed-panels/magento-admin-panel.yaml
+++ b/exposed-panels/magento-admin-panel.yaml
@@ -9,17 +9,25 @@ info:
     - https://docs.magento.com/user-guide/stores/store-urls-custom-admin.html
   tags: magento
 
-# There might be a better way and I don't know if it will always return a 302 or set an admin cookie
 requests:
   - method: GET
     path:
       - '{{BaseURL}}/admin'
+
+    redirects: true
+    max-redirects: 2
+    cookie-reuse: true
+
     matchers-condition: and
     matchers:
       - type: status
         status:
-          - 302
+          - 200
       - type: dsl
         dsl:
-          - contains(tolower(all_headers), 'admin=') # Set-Cookie: admin=nfocvc2vj376c28red2o6aukpe; e
+          - contains(tolower(all_headers), 'admin=')
         part: header
+      - type: word
+        words:
+          - "<title>Magento Admin</title>"
+        part: body
