--- a/technologies/magento-detect.yaml
+++ b/technologies/magento-detect.yaml
@@ -18,6 +18,7 @@ requests:
       # consumed by a SPA/PWA app so we need a valid GraphQL query from Magento to check
       # https://devdocs.magento.com/guides/v2.4/graphql/
 
+    matchers-condition: or
     matchers:
       - type: dsl
         dsl:
@@ -33,7 +34,7 @@ requests:
 
       - type: dsl
         dsl:
-          - 'contains(body, "message")'
+          - 'contains(body, "graphql-authorization")'
           - 'contains(body, "The current customer")'
           - 'status_code == 200'
         condition: and
