--- a/vulnerabilities/magento/magento-cacheleak.yaml
+++ b/vulnerabilities/magento/magento-cacheleak.yaml
@@ -14,9 +14,22 @@ info:
 requests:
   - method: GET
     path:
-      # Based on royduineveld.nl blogpost, was not tested against a vulnerable Magento site
       - '{{BaseURL}}/var/resource_config.json'
+      # Based on royduineveld.nl blogpost, was not tested against a vulnerable Magento site
+
+    matchers-condition: and
     matchers:
       - type: status
         status:
           - 200
+
+      - type: word
+        words:
+          - "media_directory"
+          - "allowed_resources"
+        part: body
+
+      - type: word
+        words:
+          - "application/json"
+        part: header
