Minor fix to workflows

--- a/workflows/magento-workflow.yaml
+++ b/workflows/magento-workflow.yaml
@@ -8,13 +8,10 @@ info:
 
 workflows:
   - template: technologies/magento-detect.yaml
-
+  - template: technologies/magmi-detect.yaml
     subtemplates:
-      - template: technologies/magmi-detect.yaml
-        subtemplates:
-        - template: cves/2020/CVE-2020-5776.yaml
-        - template: cves/2020/CVE-2020-5777.yaml
+      - template: cves/2020/CVE-2020-5776.yaml
+      - template: cves/2020/CVE-2020-5777.yaml
       - template: exposures/configs/magento-config.yaml
       - template: exposed-panels/magento-admin-panel.yaml
-      - template: vulnerabilities/magento
-      #- tags: magento #716
+      - template: vulnerabilities/magento/
