--- a/technologies/magento-detect.yaml
+++ b/technologies/magento-detect.yaml
@@ -11,8 +11,7 @@ requests:
   - method: GET
     path:
       - '{{BaseURL}}'
-      - '{{BaseURL}}/js/varien/product.js'
-      - '{{BaseURL}}/graphql?query=+{customerDownloadableProducts+{+items+{+date+download_url+order_increment_id+remaining_downloads+status+}}+}'
+      - '{{BaseURL}}/graphql?query=+{customerDownloadableProducts+{+items+{+date+download_url}}+}'
 
       # There might be a better way to do that, the idea of this check is that Magento might be behind some kind of proxy when
       # consumed by a SPA/PWA app so we need a valid GraphQL query from Magento to check
@@ -23,12 +22,6 @@ requests:
       - type: dsl
         dsl:
           - 'contains(tolower(all_headers), "x-magento")'
-          - 'status_code == 200'
-        condition: and
-
-      - type: dsl
-        dsl:
-          - 'contains(body, "Magento Core Team")'
           - 'status_code == 200'
         condition: and
 
