--- a/exposures/configs/nagios-status-page.yaml
+++ b/exposures/configs/nagios-status-page.yaml
@@ -4,7 +4,7 @@ info:
   name: Nagios Current Status Page
   author: dhiyaneshDk
   severity: low
-  tags: exposures,nagios
+  tags: exposure,nagios
   reference: https://www.exploit-db.com/ghdb/6918
 
 requests:
@@ -13,8 +13,8 @@ requests:
       - '{{BaseURL}}/nagios/cgi-bin/status.cgi'
       - '{{BaseURL}}/cgi-bin/nagios4/status.cgi'
       - '{{BaseURL}}/cgi-bin/nagios3/status.cgi'
+
     matchers:
       - type: word
         words:
           - Current Network Status
-        condition: and
