--- a/exposed-panels/exposed-nomad.yaml
+++ b/exposed-panels/exposed-nomad.yaml
@@ -5,6 +5,7 @@ info:
   author: pdteam
   severity: high
   tags: nomad,devops,hashicorp
+  reference: https://www.nomadproject.io/docs/internals/security
 
 requests:
   - method: GET
