--- a/default-logins/flir/flir-ax8-default-credentials.yaml
+++ b/default-logins/flir/flir-ax8-default-credentials.yaml
@@ -27,6 +27,10 @@ requests:
       - type: word
         words:
           - '"success"'
+      - type: word
+        words:
+          - "The requested page cannot be found"
+        negative: true
 
       - type: dsl
         dsl:
