Adding strict matcher

--- a/default-logins/flir/flir-ax8-default-credentials.yaml
+++ b/default-logins/flir/flir-ax8-default-credentials.yaml
@@ -27,15 +27,13 @@ requests:
       - type: word
         words:
           - '"success"'
-      - type: word
-        words:
-          - "The requested page cannot be found"
-        negative: true
 
       - type: dsl
         dsl:
           - contains(tolower(all_headers), 'text/html')
           - contains(tolower(all_headers), 'phpsessid')
+          - contains(tolower(all_headers), 'showcameraid')
+
         condition: and
 
       - type: status
