More strict matcher

--- a/vulnerabilities/other/fanruanoa2012-disclosure.yaml
+++ b/vulnerabilities/other/fanruanoa2012-disclosure.yaml
@@ -22,10 +22,15 @@ requests:
 
       - type: word
         words:
-          - 'connection'
-          - 'name'
-          - 'driver'
-          - 'password'
-          - 'url'
-          - 'user'
+          - '"connection"'
+          - '"name"'
+          - '"driver"'
+          - '"password"'
+          - '"url"'
+          - '"user"'
         condition: and
+
+      - type: word
+        words:
+          - "application/json"
+        part: header
