--- a/misconfiguration/java-melody-exposed.yaml
+++ b/misconfiguration/java-melody-exposed.yaml
@@ -8,7 +8,7 @@ info:
   reference: |
     - https://www.acunetix.com/vulnerabilities/web/javamelody-publicly-accessible/
     - https://github.com/javamelody/javamelody/wiki/UserGuide#16-security
-  tags: config,jira,confluence,bamboo,atlassian
+  tags: config,java,javamelody
 
 requests:
   - method: GET
