--- a/default-logins/xxljob/xxljob-default-login.yaml
+++ b/default-logins/xxljob/xxljob-default-login.yaml
@@ -22,11 +22,16 @@ requests:
       - type: word
         words:
           - '"code":200'
+          - '"msg"'
+          - '"content"'
+        condition: and
 
       - type: word
         words:
           - 'application/json'
+          - 'XXL_JOB_LOGIN_IDENTITY'
         part: header
+        condition: and
 
       - type: status
         status:
