--- a/misconfiguration/kubeflow-dashboard-unauth.yaml
+++ b/misconfiguration/kubeflow-dashboard-unauth.yaml
@@ -17,11 +17,14 @@ requests:
         words:
           - '{"runs":[{"id":'
           - 'resource_references'
+        condition: and
         part: body
+
       - type: word
         words:
           - "application/json"
         part: header
+
       - type: status
         status:
           - 200
