--- a/exposed-panels/cx-cloud-login.yaml
+++ b/exposed-panels/cx-cloud-login.yaml
@@ -4,15 +4,15 @@ info:
   name: CX Cloud
   author: dhiyaneshDk
   severity: info
-  tags: login
+  tags: panel
 
 requests:
   - method: GET
     path:
       - '{{BaseURL}}'
       - '{{BaseURL}}/cxcum/'
+
     matchers:
       - type: word
         words:
           - "<title>CX Cloud</title>"
-        condition: and
