--- a/misconfiguration/pinpoint-unauth.yaml
+++ b/misconfiguration/pinpoint-unauth.yaml
@@ -11,17 +11,21 @@ requests:
   - method: GET
     path:
       - '{{BaseURL}}/applications.pinpoint'
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "applicationName"
           - "serviceType"
+        condition: and
         part: body
+
       - type: word
         words:
           - "application/json"
         part: header
+
       - type: status
         status:
           - 200
