--- a/exposed-panels/phppgadmin-panel.yaml
+++ b/exposed-panels/phppgadmin-panel.yaml
@@ -14,3 +14,6 @@ requests:
       - type: word
         words:
           - "phpPgAdmin"
+          - "browser.php"
+          - "intro.php"
+        condition: and
