--- a/exposures/configs/docker-compose-config.yaml
+++ b/exposures/configs/docker-compose-config.yaml
@@ -4,7 +4,7 @@ info:
   name: docker-compose.yml exposure
   author: meme-lord & blckraven & geeknik
   severity: medium
-  tags: config,exposure
+  tags: config,exposure,devops
 
 requests:
   - method: GET
