--- a/misconfiguration/docker-registry.yaml
+++ b/misconfiguration/docker-registry.yaml
@@ -4,7 +4,7 @@ info:
   name: Docker Registry Listing
   author: puzzlepeaches
   severity: medium
-  tags: docker
+  tags: docker,devops
 
 requests:
   - method: GET
