--- a/misconfiguration/exposed-docker-api.yaml
+++ b/misconfiguration/exposed-docker-api.yaml
@@ -4,7 +4,7 @@ info:
   name: Exposed Docker API
   author: furkansenan & dwisiswant0
   severity: info
-  tags: docker,unauth
+  tags: docker,unauth,devops
 
 requests:
   - method: GET
