--- a/exposures/configs/amazon-docker-config-disclosure.yaml
+++ b/exposures/configs/amazon-docker-config-disclosure.yaml
@@ -4,7 +4,7 @@ info:
   name: Dockerrun AWS Configuration Exposure
   author: pdteam
   severity: medium
-  tags: config,exposure,aws
+  tags: config,exposure,aws,devops
 
 requests:
   - method: GET
