--- a/misconfiguration/kubernetes-pods.yaml
+++ b/misconfiguration/kubernetes-pods.yaml
@@ -6,7 +6,7 @@ info:
   severity: critical
   description: When the service port is available, anyone can execute commands inside the container. See https://github.com/officialhocc/Kubernetes-Kubelet-RCE for inspiration.
   reference: https://blog.binaryedge.io/2018/12/06/kubernetes-being-hijacked-worldwide/
-  tags: k8,unauth
+  tags: k8,unauth,kubernetes,devops
 
 requests:
   - method: GET
