--- a/exposed-panels/kubernetes-dashboard.yaml
+++ b/exposed-panels/kubernetes-dashboard.yaml
@@ -4,7 +4,7 @@ info:
   name: Kubernetes Console Exposure
   author: pdteam
   severity: low
-  tags: panel
+  tags: panel,kubernetes,devops
 
 requests:
   - method: GET
