--- a/technologies/kubernetes-version.yaml
+++ b/technologies/kubernetes-version.yaml
@@ -5,7 +5,7 @@ info:
   author: raesene
   description: Searches for exposed Kubernetes API servers which return version information unauthenticated
   severity: info
-  tags: tech,k8s
+  tags: tech,k8s,kubernetes,devops
 
 requests:
   - method: GET
