Added HuaweiCloud WAF

--- a/technologies/waf-detect.yaml
+++ b/technologies/waf-detect.yaml
@@ -2,7 +2,7 @@ id: waf-detect
 
 info:
   name: WAF Detection
-  author: dwisiswant0
+  author: dwisiswant0 & lu4nx
   severity: info
 
   # Source:
@@ -598,7 +598,7 @@ requests:
           - '(?i)class=.(db)?waf.?(-row.)?>'
         part: all
       - type: regex
-        name: chuangyu
+        name: chuangyudun
         regex:
           - '(?i)(http(s)?.//(www.)?)?365cyd.(com|net)'
         part: all
@@ -658,3 +658,11 @@ requests:
         regex:
           - '(?i)nginix.wallarm'
         part: all
+      - type: regex
+        part: all
+        name: huaweicloud
+        condition: and
+        regex:
+          - '(?)content="CloudWAF"'
+          - 'Server: CloudWAF'
+          - 'Set-Cookie: HWWAFSESID='
