--- a/vulnerabilities/other/natshell-rce.yaml
+++ b/vulnerabilities/other/natshell-rce.yaml
@@ -3,13 +3,13 @@ id: natshell-rcce
 info:
   name: NatShell Rce
   author: pikpikcu
-  severity: high
+  severity: critical
   reference: |
     - https://twitter.com/sec715/status/1397924997457317897
   tags: natshell,rce
 
 requests:
-  - method: GET
+  - method: POST
     path:
       - "{{BaseURL}}/debug.php"
     body: |
