--- a/vulnerabilities/wordpress/wp-full-path-disclosure.yaml
+++ b/vulnerabilities/wordpress/wp-full-path-disclosure.yaml
@@ -1,11 +1,11 @@
-id: wordpress-full-path-disclosure
+id: wp-full-path-disclosure
 
 info:
   name: Wordpress Full Path Disclosure
   author: arcc
   severity: info
   reference: https://make.wordpress.org/core/handbook/testing/reporting-security-vulnerabilities/#why-are-there-path-disclosures-when-directly-loading-certain-files
-  tags: debug
+  tags: debug,wordpress,fpd
 
 requests:
   - method: GET
@@ -15,5 +15,5 @@ requests:
     matchers:
       - type: word
         words:
-          - 'undefined function'
+          - 'Call to undefined function _deprecated_file()'
         part: body
