--- a/workflows/wordpress-workflow.yaml
+++ b/workflows/wordpress-workflow.yaml
@@ -33,3 +33,4 @@ workflows:
           - template: cves/2021/CVE-2021-24146.yaml
           - template: cves/2021/CVE-2021-24176.yaml
           - template: vulnerabilities/wordpress/
+          - template: exposures/files/wordpress-installation.yaml
