few update to avoid missing +ve match

--- a/exposures/files/wordpress-installation.yaml
+++ b/exposures/files/wordpress-installation.yaml
@@ -3,7 +3,8 @@ info:
   name: Wordpress Installation
   author: princechaddha
   severity: high
-  tags: wp,wordpress,exposure
+  tags: wordpress,exposure
+
 requests:
   - method: GET
     path:
@@ -14,9 +15,7 @@ requests:
       - type: word
         words:
           - "/wp-admin/install.php"
-          - "X-Redirect-By: WordPress"
         part: header
-        condition: and
 
       - type: status
         status:
