Adds: 360panyun and Sanfor WAF detection

--- a/technologies/waf-detect.yaml
+++ b/technologies/waf-detect.yaml
@@ -666,3 +666,20 @@ requests:
           - '(?)content="CloudWAF"'
           - 'Server: CloudWAF'
           - 'Set-Cookie: HWWAFSESID='
+
+dns:
+  - name: "{{FQDN}}"
+    type: CNAME
+    recursion: true
+    retries: 5
+    class: inet
+    matchers:
+      - type: word
+        name: sanfor-shield
+        words:
+          - ".sangfordns.com"
+
+      - type: word
+        name: 360panyun
+        words:
+          - ".360panyun.com"
