--- a/exposures/configs/robomongo-credential.yaml
+++ b/exposures/configs/robomongo-credential.yaml
@@ -1,11 +1,11 @@
-id: robomongo
+id: robomongo-credential
 
 info:
-  name: Detect robomongo.json
+  name: MongoDB credential disclosure
   author: geeknik
   description: MongoDB credentials file used by RoboMongo
   severity: high
-  tags: mongodb,robomongo,auth
+  tags: mongodb,robomongo,disclosure,config
 
 requests:
   - method: GET
@@ -19,6 +19,7 @@ requests:
         part: header
         words:
           - "application/json"
+
       - type: word
         words:
           - "databaseName"
@@ -26,6 +27,7 @@ requests:
           - "userPassword"
           - "serverHost"
         condition: and
+
       - type: status
         status:
           - 200
