--- a/exposures/configs/esmtprc-config.yaml
+++ b/exposures/configs/esmtprc-config.yaml
@@ -1,9 +1,8 @@
-id: esmtprc
+id: esmtprc-config
 
 info:
-  name: esmtprc dotfile
+  name: eSMTP config disclosure
   author: geeknik
-  description: esmtp configuration file
   reference: https://linux.die.net/man/5/esmtprc
   severity: high
   tags: esmtp,config
@@ -19,6 +18,7 @@ requests:
         part: header
         words:
           - "text/plain"
+
       - type: word
         part: body
         words:
@@ -26,6 +26,7 @@ requests:
           - "username"
           - "password"
         condition: and
+
       - type: status
         status:
           - 200
