misc update to avoid false positive

--- a/technologies/jsf-detection.yaml
+++ b/technologies/jsf-detection.yaml
@@ -1,9 +1,9 @@
-id: JSF-detection
+id: jsf-detection
 
 info:
   name: JavaServer Faces Detection
   author: Moritz Nentwig
-  severity: low
+  severity: info
   description: Searches for JavaServer Faces content on a URL.
 
 requests:
@@ -11,13 +11,11 @@ requests:
     path:
       - "{{BaseURL}}"
 
+    redirects: true
+    max-redirects: 2
     matchers:
       - type: word
         words:
           - "javax.faces.resource"
-          - ".jsf"
           - "javax.faces.ViewState"
-          - ".xhtml"
-          - "primefaces"
         condition: or
-    redirects: true
