--- a/technologies/jsf-detection.yaml
+++ b/technologies/jsf-detection.yaml
@@ -5,6 +5,7 @@ info:
   author: Moritz Nentwig
   severity: info
   description: Searches for JavaServer Faces content on a URL.
+  tags: jsf,tech
 
 requests:
   - method: GET
