--- a/vulnerabilities/other/natshell-rce.yaml
+++ b/vulnerabilities/other/natshell-rce.yaml
@@ -1,11 +1,10 @@
-id: natshell-rcce
+id: natshell-rce
 
 info:
-  name: NatShell Rce
+  name: NatShell Debug File RCE
   author: pikpikcu
   severity: critical
-  reference: |
-    - https://twitter.com/sec715/status/1397924997457317897
+  reference: https://mp.weixin.qq.com/s/g4YNI6UBqIQcKL0TRkKWlw
   tags: natshell,rce
 
 requests:
